# AI-homework-7.8

./: .gitignore  .gitlab-ci.yml  AGENT_LOG.md  Dockerfile  PLAN.md  README.md  REFLECTION.md  SPEC.md  SPEC_PROCESS.md  ci.yml  demo_mechanisms.py  lastfailed  nodeids  pyproject.toml  render.yaml  requires.txt  test_cli.py  test_config.py  test_context.py  test_correction.py  test_file_guard.py  test_memory.py  test_registry.py  test_test_runner.py  test_webui.py  top_level.txt
fixlot/: __main__.py
fixlot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
fixlot/cli/: main.py
fixlot/config/: credentials.py  loader.py
fixlot/core/: context.py  llm.py  loop.py
fixlot/feedback/: classifier.py  correction.py  loop.py  parser.py
fixlot/guardrails/: file_guard.py  shell_guard.py
fixlot/memory/: retrieval.py  store.py
fixlot/tools/: file.py  registry.py  shell.py  test_runner.py
fixlot/webui/: app.py
fixlot/webui/templates/: index.html
tests/: test_classifier.py  test_feedback_loop.py  test_file_tools.py  test_llm.py  test_loop.py  test_parser.py  test_shell_guard.py  test_shell_tools.py
tests/demo/: test_deep_dive_demo.py  test_feedback_demo.py  test_guardrail_demo.py
